# juce_fft_equalizer

./: .clang-format  .gitignore  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h  README.md  copy_audio.cmake  doxygen_config  equalizer_data_analysis.ipynb  fft_analysis.ipynb  fft_equalizer.jucer
AudioSamples/: 1kHz_44100Hz_16bit_30sec.flac
Source/: AudioPlayer.cc  AudioPlayer.cpp  AudioPlayer.h  AudioPlayer.hpp  Equalizer.cc  Equalizer.cpp  Equalizer.h  Equalizer.hpp  FFT.h  FFT.hpp  Main.cc  Main.cpp  MainComponent.cc  MainComponent.cpp  MainComponent.h  MainComponent.hpp  fft.h
